# object-detection-llms-testing

./: .gitignore  README.md  pyproject.toml
scripts/: install_llama_cpp.sh
src/: app.py  cli.py  detection_pipeline.py  image_preprocessing.py
