[project]
name = "llm-object-grounding"
version = "0.1.0"
description = "Interactive test console for assessing Vision-Language Models (VLMs) on general Object Detection tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "json-repair==0.61.0",
    "matplotlib==3.11.0",
    "openai==2.43.0",
    "pillow==12.2.0",
    "gradio==6.19.0",
    "requests>=2.34.2",
    "wrapt>=2.2.2",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "streamlit>=1.58.0",
    "opencv-python>=4.9.0.80",
]


[project.scripts]
# Launch the Gradio web interface
detection-gui = "gui:main"
# Run the pipeline from the terminal (no GUI required)
detection-cli = "cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
